<resources>
    <string name="new_product">New Product</string>
    <string name="name_product_arabic">Name of product (arabic language)</string>
    <string name="name_product_english">Name of product (English Language)</string>
    <string name="description_product">Description Product (Arabic Language)</string>
    <string name="description_product_en">Description Product (English Language)</string>
    <string name="price_product">Product price</string>
    <string name="quantity_product">Quantity Product</string>
    <string name="delivery_in_seller_location_only">Delivery in Seller Location only</string>
    <string name="sku_title">Sku</string>
    <string name="discount_product">Product discount</string>
    <string name="begin_discount">Begin Discount</string>
    <string name="end_discount" >End Discount</string>
    <string name="questions_on_product">Questions on Product</string>
    <string name="add_another_question">Add Another Question</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="checkInput">Please insert missing fields</string>
    <string name="upload_image_please">Upload Image product Please</string>
    <string name="upload_success">Image Uploaded Successfully</string>
    <string name="type">Type</string>
    <string name="opening_tags">Opening Tags</string>
    <string name="images_uploaded">Images Uploaded</string>
    <string name="pin_product">Pin Product</string>
    <string name="visibility_product">product visibility</string>
    <string name="tags_allowed_message">You cannot select more than 6 tags</string>
    <string name="choose_opening">" + Choose opening word "</string>
    <string name="inputLength">"Description not less than 3 characters "</string>
    <string name="not_exceed_150_characters">Not Exceed 150 Characters</string>
    <string name="price_hint">500 SA</string>
    <string name="plate_hint">5 plates</string>
    <string name="weight_hint">500 Kg</string>
    <string name="weight_title">Weight</string>
    <string name="upload_images">Upload Product images please</string>
    <string name="chooseStartDate">Choose Start Date Please</string>
    <string name="sku">SKU</string>
    <string name="discount_hint">Discount hint</string>
    <string name="end_discount_hint">End in</string>
    <string name="begin_discount_hint">Begin in</string>
</resources>