<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddProductFirstStepActivity">


    <com.test.utils.custom.CustomToolbar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:isBack="true"
        android:layout_marginTop="20dp"
        android:id="@+id/custom_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/new_product"
        />

    <com.test.utils.custom.CustomTitleEditBox
        android:layout_width="0dp"
        android:inputType="text"
        android:layout_margin="15dp"
        android:maxLength="150"

        android:id="@+id/tv_name_product_ar"
        android:text="@string/name_product_arabic"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.test.utils.custom.CustomTitleEditBox
        android:layout_width="0dp"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:maxLength="150"
        android:id="@+id/tv_name_product_en"
        android:text="@string/name_product_english"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_name_product_ar"
        app:layout_constraintTop_toBottomOf="@id/tv_name_product_ar"
        app:layout_constraintEnd_toEndOf="@id/tv_name_product_ar"
        />




    <com.test.utils.custom.CustomSpinner
        android:layout_width="0dp"
        android:id="@+id/spinner_tags"
        android:layout_marginTop="15dp"
        android:text="@string/type"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_name_product_en"
        app:layout_constraintTop_toBottomOf="@id/tv_name_product_en"
        app:layout_constraintEnd_toEndOf="@id/tv_name_product_en"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:id="@+id/checkbox_delivery"
        app:layout_constraintStart_toStartOf="@id/spinner_tags"
        app:layout_constraintTop_toBottomOf="@id/spinner_tags"
        android:text="@string/delivery_in_seller_location_only"
        android:buttonTint="@color/teaBlue"
        />

    <com.test.utils.custom.CustomUploadBtn
        android:layout_width="0dp"
        android:id="@+id/btn_upload"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/checkbox_delivery"
        app:layout_constraintTop_toBottomOf="@id/checkbox_delivery"
        app:layout_constraintEnd_toEndOf="@id/spinner_tags"
        />

    <com.test.utils.custom.CustomTitleEditBox
        android:layout_width="0dp"
        android:inputType="text"
        android:id="@+id/tv_description_product_ar"
        android:text="@string/description_product"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:maxLength="150"
        app:layout_constraintStart_toStartOf="@id/tv_name_product_en"
        app:layout_constraintTop_toBottomOf="@id/btn_upload"
        app:layout_constraintEnd_toEndOf="@id/tv_name_product_en"
        />

    <com.test.utils.custom.CustomTitleEditBox
        android:layout_width="0dp"
        android:inputType="text"
        android:id="@+id/tv_description_product_en"
        android:text="@string/description_product_en"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:maxLength="150"
        app:layout_constraintStart_toStartOf="@id/tv_description_product_ar"
        app:layout_constraintTop_toBottomOf="@id/tv_description_product_ar"
        app:layout_constraintEnd_toEndOf="@id/tv_description_product_ar"
        />

    <com.test.utils.custom.CustomTitleEditBox
        android:layout_width="0dp"
        android:inputType="number"
        android:id="@+id/tv_product_price"
        android:layout_marginEnd="10dp"
        android:text="@string/price_product"
        android:layout_marginTop="15dp"

        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_description_product_en"
        app:layout_constraintTop_toBottomOf="@id/tv_description_product_en"
        app:layout_constraintEnd_toStartOf="@id/tv_product_quantity"
        />

    <com.test.utils.custom.CustomTitleEditBox
        android:layout_width="0dp"
        android:inputType="number"
        android:id="@+id/tv_product_quantity"
        android:text="@string/quantity_product"
        android:layout_marginTop="15dp"

        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/tv_product_price"
        app:layout_constraintTop_toBottomOf="@id/tv_description_product_en"
        app:layout_constraintEnd_toEndOf="@id/tv_description_product_en"
        />


    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:backgroundTint="@color/teaBlue"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        android:text="@string/next"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_price"
        android:id="@+id/btn_next_add"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        app:cornerRadius="5dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>